CHANGE Widgets - replace widgetSettings with widget.settings

--- a/resources/views/Widgets/Common/TitleBarWidget.twig
+++ b/resources/views/Widgets/Common/TitleBarWidget.twig
@@ -1,4 +1,4 @@
-{% set text = widgetSettings.text %}
+{% set text = widget.settings.text %}
 
 <div class="homepage-title m-b-1">
     {% if text | trim is not empty %}
