--- a/resources/views/Widgets/Grid/TwoColumnWidget.twig
+++ b/resources/views/Widgets/Grid/TwoColumnWidget.twig
@@ -1,16 +1,16 @@
-{% if widget.settings.layout == "default" %}
+{% if widget.settings.layout == "oneToOne" %}
     {# 2 Spalten identisch: #}
     <div class="row">
         <div class="col-xs-12 col-md-6 nested-widget-container"></div>
         <div class="col-xs-12 col-md-6 nested-widget-container"></div>
     </div>
-{% elseif widget.settings.layout == "a" %}
+{% elseif widget.settings.layout == "twoToOne" %}
     {# 2 Spalten links groß: #}
     <div class="row">
         <div class="col-xs-12 col-md-8 nested-widget-container"></div>
         <div class="col-xs-12 col-md-4 nested-widget-container"></div>
     </div>
-{% elseif widget.settings.layout == "b" %}
+{% elseif widget.settings.layout == "oneToTwo" %}
     {# 2 Spalten rechts groß: #}
     <div class="row">
         <div class="col-xs-12 col-md-4 nested-widget-container"></div>
