--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -42,49 +42,53 @@
 
 {% set carouselId = random(999999) %}
 
-<div class="cmp cmp-hero">
-    <div class="hero-main">
-        <div id="carousel-example-generic_{{ carouselId }}" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner" role="listbox">
-                {% for slide in slides %}
-                    <div class="carousel-item{% if loop.first %} active{% endif %}">
-                        <a class="hero-category" {% if slide.url is defined %}href="{{ slide.url }}"{% endif %}>
-                            {% if slide.imagePath is defined %}
-                                <img src="{{ slide.imagePath }}" alt="{{ slide.name }}" class="img-fluid">
-                            {% else %}
-                                <h2 class="text-danger">No image provided.</h2>
-                            {% endif %}
-                            {% if slide.name is defined %}
-                                <div class="carousel-caption">
-                                    <h2>
-                                        <i class="fa fa-angle-double-right" aria-hidden="true"></i> {{ slide.name }}
-                                    </h2>
-                                </div>
-                            {% endif %}
-                        </a>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="cmp cmp-hero">
+            <div class="hero-main">
+                <div id="carousel-example-generic_{{ carouselId }}" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        {% for slide in slides %}
+                            <div class="carousel-item{% if loop.first %} active{% endif %}">
+                                <a class="hero-category" {% if slide.url is defined %}href="{{ slide.url }}"{% endif %}>
+                                    {% if slide.imagePath is defined %}
+                                        <img src="{{ slide.imagePath }}" alt="{{ slide.name }}" class="img-fluid">
+                                    {% else %}
+                                        <h2 class="text-danger">No image provided.</h2>
+                                    {% endif %}
+                                    {% if slide.name is defined %}
+                                        <div class="carousel-caption">
+                                            <h2>
+                                                <i class="fa fa-angle-double-right" aria-hidden="true"></i> {{ slide.name }}
+                                            </h2>
+                                        </div>
+                                    {% endif %}
+                                </a>
+                            </div>
+                        {% endfor %}
                     </div>
-                {% endfor %}
+
+                    {% if slides | length > 1 %}
+                        <ol class="carousel-indicators">
+                            {% for i in 1..slides | length %}
+                                <li data-target="#carousel-example-generic_{{ carouselId }}" data-slide-to="{{ i - 1 }}" {% if loop.first %}class="active"{% endif %}></li>
+                            {% endfor %}
+                        </ol>
+
+                        <a class="left carousel-control" href="#carousel-example-generic_{{ carouselId }}" role="button"
+                            data-slide="prev">
+                            <span class="icon-prev" aria-hidden="true"></span>
+                            <span class="sr-only">{{ trans("Ceres::Template.homepageBack") }}</span>
+                        </a>
+
+                        <a class="right carousel-control" href="#carousel-example-generic_{{ carouselId }}" role="button"
+                            data-slide="next">
+                            <span class="icon-next" aria-hidden="true"></span>
+                            <span class="sr-only">{{ trans("Ceres::Template.homepageNext") }}</span>
+                        </a>
+                    {% endif %}
+                </div>
             </div>
-
-            {% if slides | length > 1 %}
-                <ol class="carousel-indicators">
-                    {% for i in 1..slides | length %}
-                        <li data-target="#carousel-example-generic_{{ carouselId }}" data-slide-to="{{ i - 1 }}" {% if loop.first %}class="active"{% endif %}></li>
-                    {% endfor %}
-                </ol>
-
-                <a class="left carousel-control" href="#carousel-example-generic_{{ carouselId }}" role="button"
-                    data-slide="prev">
-                    <span class="icon-prev" aria-hidden="true"></span>
-                    <span class="sr-only">{{ trans("Ceres::Template.homepageBack") }}</span>
-                </a>
-
-                <a class="right carousel-control" href="#carousel-example-generic_{{ carouselId }}" role="button"
-                    data-slide="next">
-                    <span class="icon-next" aria-hidden="true"></span>
-                    <span class="sr-only">{{ trans("Ceres::Template.homepageNext") }}</span>
-                </a>
-            {% endif %}
         </div>
     </div>
 </div>
