--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -7,39 +7,41 @@
 {% endif %}
 
 {{ Twig.set("itemList", Twig.call("services.itemList.getItemList", [widget.settings.listType, itemListId, widget.settings.itemSort, widget.settings.maxItems]) ) }}
-<div>
-    <div class="m-b-2 clearfix">
-        <div class="section-header m-b-1">
-            {% if widget.settings.listType == "category" %}
-                {{ Twig.if("category") }}
-                    <h2>{{ Twig.print("category.details[0].name") }}</h2>
-                    <a href="{{ Twig.print(Twig.call("services.category.getURL", [category])) }}" class="section-link-all">
-                        <i class="fa fa-angle-double-right" aria-hidden="true"></i> {{ Twig.trans("Ceres::Template.homepageShowAll") }}
-                    </a>
-                {{ Twig.else() }}
-                    <h2>{{ Twig.trans("Ceres::Widget.itemListPlaceholderListHeader") }}</h2>
-                {{ Twig.endif() }}
-            {% elseif widget.settings.listType == "last_seen" %}
-                <h2>{{ Twig.trans("Ceres::Template.itemListLastSeen") }}</h2>
-            {% elseif widget.settings.listType == "tag_list" %}
-                <h2>Tag List Name (placeholder)</h2>
-            {% endif %}
-        </div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="m-b-2 clearfix">
+            <div class="section-header m-b-1">
+                {% if widget.settings.listType == "category" %}
+                    {{ Twig.if("category") }}
+                        <h2>{{ Twig.print("category.details[0].name") }}</h2>
+                        <a href="{{ Twig.print(Twig.call("services.category.getURL", [category])) }}" class="section-link-all">
+                            <i class="fa fa-angle-double-right" aria-hidden="true"></i> {{ Twig.trans("Ceres::Template.homepageShowAll") }}
+                        </a>
+                    {{ Twig.else() }}
+                        <h2>{{ Twig.trans("Ceres::Widget.itemListPlaceholderListHeader") }}</h2>
+                    {{ Twig.endif() }}
+                {% elseif widget.settings.listType == "last_seen" %}
+                    <h2>{{ Twig.trans("Ceres::Template.itemListLastSeen") }}</h2>
+                {% elseif widget.settings.listType == "tag_list" %}
+                    <h2>Tag List Name (placeholder)</h2>
+                {% endif %}
+            </div>
 
-        <ul class="product-list row grid">
-            {{ Twig.if("itemList is not empty") }}
-                {{ Twig.for("item", "itemList[0:4]") }}
-                    <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                        {{ Twig.include( "Ceres::Widgets.Common.Partials.CategoryListItemPreview", { "item": "item" } ) }}
-                    </li>
-                {{ Twig.endfor() }}
-            {{ Twig.else() }}
-                {{ Twig.for("i", "0..3") }}
-                    <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                        {{ Twig.include("Ceres::Widgets.Common.Partials.CategoryListItemPreview") }}
-                    </li>
-                {{ Twig.endfor() }}
-            {{ Twig.endif() }}
-        </ul>
+            <ul class="product-list row grid">
+                {{ Twig.if("itemList is not empty") }}
+                    {{ Twig.for("item", "itemList[0:4]") }}
+                        <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                            {{ Twig.include( "Ceres::Widgets.Common.Partials.CategoryListItemPreview", { "item": "item" } ) }}
+                        </li>
+                    {{ Twig.endfor() }}
+                {{ Twig.else() }}
+                    {{ Twig.for("i", "0..3") }}
+                        <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                            {{ Twig.include("Ceres::Widgets.Common.Partials.CategoryListItemPreview") }}
+                        </li>
+                    {{ Twig.endfor() }}
+                {{ Twig.endif() }}
+            </ul>
+        </div>
     </div>
 </div>
