--- a/resources/css/content-builder.css
+++ b/resources/css/content-builder.css
@@ -66,7 +66,7 @@ body
     z-index: 4;
 }
 
-.nested-widget-container .context-menu
+[data-builder-child-container] .context-menu
 {
     left: calc(50% - 40px);
     top: calc(50% - 18px);
@@ -115,14 +115,14 @@ body
     background-color: #43c643
 }
 
-.nested-widget-container
+[data-builder-child-container]
 {
     height: 200px;
 }
 
 
-.nested-widget-container.active:not(.set)::after,
-.nested-widget-container:not(.set)::after
+[data-builder-child-container].active:not(.set)::after,
+[data-builder-child-container]:not(.set)::after
 {
     content: "";
     position: absolute;
@@ -136,27 +136,27 @@ body
 
 
 
-.nested-widget-container.active:not(.set)::after
+[data-builder-child-container].active:not(.set)::after
 {
     background: rgba(106,210,106,0.3);
 }
 
 
 
-.ui-resizable-autohide .active .nested-widget-container:not(.set),
-.ui-resizable-autohide .nested-widget-container:not(.set)
+.ui-resizable-autohide .active [data-builder-child-container]:not(.set),
+.ui-resizable-autohide [data-builder-child-container]:not(.set)
 {
     border: 2px solid #ffffff;
 }
 
-.active .nested-widget-container:not(.set),
-.nested-widget-container:not(.set)
+.active [data-builder-child-container]:not(.set),
+[data-builder-child-container]:not(.set)
 {
     border-left: 2px solid #ffffff;
     border-right: 2px solid #ffffff;
 }
 
-.nested-widget-container .add-icon
+[data-builder-child-container] .add-icon
  {
      position: absolute;
      z-index: 2;
@@ -164,7 +164,7 @@ body
      top: calc(50% - 18px);
  }
 
-.nested-widget-container.active:not(.set)::before
+[data-builder-child-container].active:not(.set)::before
 {
     content: "Ziehen Sie ein Element in diesen Bereich";
     font-size: 80%;
@@ -176,7 +176,7 @@ body
     right: 0px;
 }
 
-.nested-widget-container.active .add-icon
+[data-builder-child-container].active .add-icon
 {
     display: none;
 }
