--- a/resources/views/Widgets/Grid/FourColumnWidget.twig
+++ b/resources/views/Widgets/Grid/FourColumnWidget.twig
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-xs-12 col-md-3 nested-widget-container"></div>
-    <div class="col-xs-12 col-md-3 nested-widget-container"></div>
-    <div class="col-xs-12 col-md-3 nested-widget-container"></div>
-    <div class="col-xs-12 col-md-3 nested-widget-container"></div>
+    <div class="col-xs-12 col-md-3" data-builder-child-container="first">{{ children.first | raw }}</div>
+    <div class="col-xs-12 col-md-3" data-builder-child-container="second">{{ children.second | raw }}</div>
+    <div class="col-xs-12 col-md-3" data-builder-child-container="third">{{ children.third | raw }}</div>
+    <div class="col-xs-12 col-md-3" data-builder-child-container="fourth">{{ children.fourth | raw }}</div>
 </div>
