--- a/resources/views/Widgets/Grid/ThreeColumnWidget.twig
+++ b/resources/views/Widgets/Grid/ThreeColumnWidget.twig
@@ -1,25 +1,27 @@
+{% set layout = widget.settings.layout.mobile %}
+
 <div class="row">
-    {% if widget.settings.layout == "oneToOneToOne" %}
+    {% if layout == "oneToOneToOne" %}
         {# 3 Spalten identisch: #}
         <div class="col-xs-12 col-md-4" data-builder-child-container="first">{{ children.first | raw }}</div>
         <div class="col-xs-12 col-md-4" data-builder-child-container="second">{{ children.second | raw }}</div>
         <div class="col-xs-12 col-md-4" data-builder-child-container="third">{{ children.third | raw }}</div>
-    {% elseif widget.settings.layout == "twoToOneToOne" %}
+    {% elseif layout == "twoToOneToOne" %}
         {# 3 Spalten links groß: #}
         <div class="col-xs-12 col-md-6" data-builder-child-container="first">{{ children.first | raw }}</div>
         <div class="col-xs-12 col-md-3" data-builder-child-container="second">{{ children.second | raw }}</div>
         <div class="col-xs-12 col-md-3" data-builder-child-container="third">{{ children.third | raw }}</div>
-    {% elseif widget.settings.layout == "oneToTwoToOne" %}
+    {% elseif layout == "oneToTwoToOne" %}
         {# 3 Spalten mitte groß: #}
         <div class="col-xs-12 col-md-3" data-builder-child-container="first">{{ children.first | raw }}</div>
         <div class="col-xs-12 col-md-6" data-builder-child-container="second">{{ children.second | raw }}</div>
         <div class="col-xs-12 col-md-3" data-builder-child-container="third">{{ children.third | raw }}</div>
-    {% elseif widget.settings.layout == "oneToOneToTwo" %}
+    {% elseif layout == "oneToOneToTwo" %}
         {# 3 Spalten rechts groß: #}
         <div class="col-xs-12 col-md-3" data-builder-child-container="first">{{ children.first | raw }}</div>
         <div class="col-xs-12 col-md-3" data-builder-child-container="second">{{ children.second | raw }}</div>
         <div class="col-xs-12 col-md-6" data-builder-child-container="third">{{ children.third | raw }}</div>
-    {% elseif widget.settings.layout == "twoToOneStacked" %}
+    {% elseif layout == "twoToOneStacked" %}
         {# 3 Spalten, links eine, rechts 2: #}
         <div class="col-xs-12 col-md-8" data-builder-child-container="first">{{ children.first | raw }}</div>
 
@@ -29,7 +31,7 @@
                 <div class="col-xs-12" data-builder-child-container="third">{{ children.third | raw }}</div>
             </div>
         </div>
-    {% elseif widget.settings.layout == "oneStackedToTwo" %}
+    {% elseif layout == "oneStackedToTwo" %}
         {# 3 Spalten, links 2, rechts eine: #}
         <div class="col-xs-12 col-md-4">
             <div class="row">
