--- a/resources/views/Widgets/Grid/TwoColumnWidget.twig
+++ b/resources/views/Widgets/Grid/TwoColumnWidget.twig
@@ -1,13 +1,14 @@
+{% set layout = widget.settings.layout.mobile %}
 <div class="row">
-    {% if widget.settings.layout == "oneToOne" %}
+    {% if layout == "oneToOne" %}
         {# 2 Spalten identisch: #}
         <div class="col-xs-12 col-md-6" data-builder-child-container="first">{{ children.first | raw }}</div>
         <div class="col-xs-12 col-md-6" data-builder-child-container="second">{{ children.second | raw }}</div>
-    {% elseif widget.settings.layout == "twoToOne" %}
+    {% elseif layout == "twoToOne" %}
         {# 2 Spalten links groß: #}
         <div class="col-xs-12 col-md-8" data-builder-child-container="first">{{ children.first | raw }}</div>
         <div class="col-xs-12 col-md-4" data-builder-child-container="second">{{ children.second | raw }}</div>
-    {% elseif widget.settings.layout == "oneToTwo" %}
+    {% elseif layout == "oneToTwo" %}
         {# 2 Spalten rechts groß: #}
         <div class="col-xs-12 col-md-4" data-builder-child-container="first">{{ children.first | raw }}</div>
         <div class="col-xs-12 col-md-8" data-builder-child-container="second">{{ children.second | raw }}</div>
