--- a/resources/views/Containers/Partials/ItemLists/ItemListHeader.twig
+++ b/resources/views/Containers/Partials/ItemLists/ItemListHeader.twig
@@ -1,23 +1,23 @@
-{% set isNameEmpty = trans("Ceres::Template.ItemList" ~ itemListId ~ "ListName") == 'Name' or 
-                     trans("Ceres::Template.ItemList" ~ itemListId ~ "ListName") is empty %}
+{% set isNameEmpty = trans("Ceres::Template.itemList" ~ itemListId ~ "ListName") == 'Name' or 
+                     trans("Ceres::Template.itemList" ~ itemListId ~ "ListName") is empty %}
 
 {% if listType == "last_seen" %}
     {% if isNameEmpty %}
         {% set header = trans("Ceres::Template.itemListLastSeen") %}
     {% else %}
-        {% set header = trans("Ceres::Template.ItemList" ~ itemListId ~ "ListName") %}
+        {% set header = trans("Ceres::Template.itemList" ~ itemListId ~ "ListName") %}
     {% endif %}
 {% elseif listType == "cross_selling" %}
     {% if isNameEmpty %}
         {% set header = trans("Ceres::Template.itemListX" ~ config("Ceres.item.lists.cross_selling_type")) %}
     {% else %}
-        {% set header = trans("Ceres::Template.ItemList" ~ itemListId ~ "ListName") %}
+        {% set header = trans("Ceres::Template.itemList" ~ itemListId ~ "ListName") %}
     {% endif %}
 {% elseif listType == "tag_list" %}
     {% if isNameEmpty %}
         {% set header = "Tags" %}
     {% else %}
-        {% set header = trans("Ceres::Template.ItemList" ~ itemListId ~ "ListName") %}
+        {% set header = trans("Ceres::Template.itemList" ~ itemListId ~ "ListName") %}
     {% endif %}
 {% endif %}
 
