--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -1,10 +1,10 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
-{% set listType = widget.settings.listType.mobile %}
-{% set itemSort = widget.settings.itemSort.mobile %}
-{% set maxItems = widget.settings.maxItems.mobile %}
-{% set categoryId = widget.settings.categoryId.mobile %}
-{% set itemListId = widget.settings.tagId.mobile %}
+{% set listType = widget.settings.listType.mobileValue %}
+{% set itemSort = widget.settings.itemSort.mobileValue %}
+{% set maxItems = widget.settings.maxItems.mobileValue %}
+{% set categoryId = widget.settings.categoryId.mobileValue %}
+{% set itemListId = widget.settings.tagId.mobileValue %}
 {% if listType == "category" %}
     {% set itemListId = categoryId %}
     {{ Twig.set("category", Twig.call("services.category.get", [categoryId])) }}
@@ -30,10 +30,10 @@
                     <h2>Tag List Name (placeholder)</h2>
                 {% endif %}
             </div>
-
+            
             <ul class="product-list row grid">
                 {{ Twig.if("itemList is not empty") }}
-                    {{ Twig.for("item", "itemList[0:4]") }}
+                    {{ Twig.for("item", "itemList[0].documents[0:4]") }}
                         <li class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                             {{ Twig.include( "Ceres::Widgets.Common.Partials.CategoryListItemPreview", { "item": "item" } ) }}
                         </li>
