--- a/resources/views/Widgets/Common/TitleBarWidget.twig
+++ b/resources/views/Widgets/Common/TitleBarWidget.twig
@@ -1,13 +1,13 @@
-{% set text = widget.settings.text.mobileValue %}
+{% set text = widget.settings.text.mobile %}
 
 <div class="row">
     <div class="col-xs-12">
         <div class="homepage-title m-b-1">
-            {{ Twig.if("text | trim is not empty") }}
-                <h1>{{ Twig.print("text") }}</h1>
-            {{ Twig.else() }}
-                <h1>{{ config("Ceres.header.company_name") }}</h1>
-            {{ Twig.endif() }}
+            {% if text | trim is not empty %}
+                <h1>{{ text }}</h1>
+            {% else %}
+                <h1>{{ Twig.print('config("Ceres.header.company_name")') }}</h1>
+            {% endif %}
         </div>
     </div>
 </div>
