--- a/resources/views/Homepage/DefaultHomepage.twig
+++ b/resources/views/Homepage/DefaultHomepage.twig
@@ -73,7 +73,7 @@
     <div class="home container-max">
         <div class="row">
             <div class="homepage-title m-b-1">
-                <h1>{{ config("Ceres.header.company_name") }}</h1>
+                <h1>{{ trans("Ceres::Template.headerCompanyName") }}</h1>
             </div>
         </div>
 
