--- a/resources/views/StaticPages/CancellationForm.twig
+++ b/resources/views/StaticPages/CancellationForm.twig
@@ -5,7 +5,7 @@
 {% block PartialHead %}
     <meta name="description" content="{{ trans('Ceres::Template.cancellationFormMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_cancel_form") }}">
-    <title class="no-print">{{ trans("Ceres::Template.cancellationFormNoShy") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title class="no-print">{{ trans("Ceres::Template.cancellationFormNoShy") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
