--- a/resources/views/StaticPages/CancellationRights.twig
+++ b/resources/views/StaticPages/CancellationRights.twig
@@ -5,7 +5,7 @@
 {% block PartialHead %}
     <meta name="description" content="{{ trans('Ceres::Template.cancellationRightsMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_cancel_rights") }}">
-    <title>{{ trans("Ceres::Template.cancellationRightsNoShy") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title>{{ trans("Ceres::Template.cancellationRightsNoShy") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
