--- a/resources/views/StaticPages/ItemNotFound.twig
+++ b/resources/views/StaticPages/ItemNotFound.twig
@@ -1,7 +1,7 @@
 {% extends getPartial('page-design') %}
 
 {% block PartialHead %}
-    <title>404 | {{ config("Ceres.header.company_name") }}</title>
+    <title>404 | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
