--- a/resources/views/StaticPages/PageNotFound.twig
+++ b/resources/views/StaticPages/PageNotFound.twig
@@ -3,7 +3,7 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% block PartialHead %}
-    <title>404 | {{ config("Ceres.header.company_name") }}</title>
+    <title>404 | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
