--- a/resources/views/StaticPages/PrivacyPolicy.twig
+++ b/resources/views/StaticPages/PrivacyPolicy.twig
@@ -5,7 +5,7 @@
 {% block PartialHead %}
     <meta name="description" content="{{ trans('Ceres::Template.privacyPolicyMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_privacy_policy") }}">
-    <title>{{ trans("Ceres::Template.privacyPolicyNoShy") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title>{{ trans("Ceres::Template.privacyPolicyNoShy") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
