--- a/resources/views/StaticPages/TermsAndConditions.twig
+++ b/resources/views/StaticPages/TermsAndConditions.twig
@@ -5,7 +5,7 @@
 {% block PartialHead %}
     <meta name="description" content="{{ trans('Ceres::Template.termsAndConditionsMetaDescription') }}">
     <meta name="robots" content="{{ config("Ceres.meta.robots_terms_and_conditions") }}">
-    <title>{{ trans("Ceres::Template.termsAndConditions") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title>{{ trans("Ceres::Template.termsAndConditions") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
