--- a/resources/views/OrderReturn/OrderReturnConfirmation.twig
+++ b/resources/views/OrderReturn/OrderReturnConfirmation.twig
@@ -2,7 +2,7 @@
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
-    <title>{{ trans("Ceres::Template.returnConfirmationTitle") }} | {{ config("Ceres.header.company_name") }}</title>
+    <title>{{ trans("Ceres::Template.returnConfirmationTitle") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
 {% endblock %}
 
 {% block PageBody %}
